2005-12-25  Alex Roitman  <shura@gramps-project.org>
	* src/EditPlace.py: Change arguments, use correct track.
	* src/PlaceView.py: Call EditPlace with new arguments.
	* src/Sources.py: Minor.

2005-12-24  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: get bookmark menu working
	* src/EditPlace.py: menu tracking
	* src/DisplayState.py: recent file support
	* src/ViewManager.py: recent file support

2005-12-23  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: recent file support
	* src/EditPerson.py: Window management
	* src/EditSource.py: Window management
	* src/EventEdit.py: Window management
	* src/ListBox.py: Window management
	* src/Sources.py: Window management
	* src/UrlEdit.py: Window management
	* src/ViewManager.py: Window management

2005-12-23  Alex Roitman  <shura@gramps-project.org>
	* src/EditPerson.py: Swap menu/submenu labels.
	* src/EventEdit.py: Menu label fixes.

	* src/DisplayState.py: Simplify ID generation for UIManager.
	* src/EditPerson.py: Use id(self) instead of self.
	* src/EditPlace.py: Use id(self) instead of self.
	* src/EditSource.py: Use id(self) instead of self.
	* src/EventEdit.py: Use id(self) instead of self.

	* doc/grampsxml.dtd: Describe new XML.
	* doc/grampsxml.rng: Describe new XML.

2005-12-22  Don Allingham  <don@gramps-project.org>
	* src/AddrEdit.py: More window management
	* src/AttrEdit.py: More window management
	* src/DisplayState.py: added push_message
	* src/EditPerson.py: More window management
	* src/ListBox.py: More window management
	* src/NameEdit.py: More window management
	* src/Navigation.py: More window management
	* src/PeopleModel.py: More window management
	* src/PersonView.py: More window management
	* src/ViewManager.py: better handling of ui and action groups

2005-12-22  Alex Roitman  <shura@gramps-project.org>
	* test/RunAllTests.py: Change header.
	* src/EventEdit.py: Fix build_ methods.
	* src/MediaView.py: Skip empty selections.