@@ -1,3 +1,9 @@
+2005-12-25  Don Allingham  <don@gramps-project.org>
+	* src/Bookmarks.py: remove debugging statements
+	* src/DisplayState.py: remove extra rebuild request
+	* src/Plugins.py: start support of Report menu
+	* src/ViewManager.py: tie in report support
+
 2005-12-25  Alex Roitman  <shura@gramps-project.org>
 	* src/EditPlace.py: Change arguments, use correct track.
 	* src/PlaceView.py: Call EditPlace with new arguments.
